WIP teacher blogs

--- a/app/views/pages/_about_sidebar.html.erb
+++ b/app/views/pages/_about_sidebar.html.erb
@@ -7,4 +7,5 @@
   <%= link_to 'Sustainability', about_sustainability_path, :class => "list-group-item #{'active' if controller.action_name == 'sustainability'}" %>
   <%= link_to 'Announcements', about_announcements_path, :class => "list-group-item #{'active' if controller.action_name == 'announcements'}" %>
   <%= link_to 'EECS In The News', about_news_path, :class => "list-group-item #{'active' if controller.action_name == 'news'}" %>
+  <%= link_to 'Get Involved', about_volunteers_path, :class => "list-group-item #{'active' if controller.action_name == 'volunteers'}" %>
 </div>
