--- a/app/views/pages/volunteers.html.erb
+++ b/app/views/pages/volunteers.html.erb
@@ -4,7 +4,7 @@
   <div class="container">
     <ol class="breadcrumb">
       <li><%= link_to 'Home', root_path %></li>
-      <li class="active">About us</li>
+      <li class="active">Volunteers</li>
     </ol>
   </div>
 </div>
@@ -18,7 +18,7 @@
       </div>
       <div class="col-md-9">
         <div class="content">
-          <h1><span>Academics</span></h1>
+          <h1><span>Volunteers</span></h1>
           <p>At EECS we are focused on creating students who are engaged in learning and helping them develop strong foundational skills in reading, writing, and mathematics that will allow them to apply their knowledge and skills and to think more deeply with rigor through relevant learning tasks.</p>
 
           <p>We focus on monitoring student growth and not just student achievement. Our commitment as a school is to ensure students are growing as learners, that they are appropriately challenged, and that they learn how to apply their knowldege pragmatically. We meet each student where they are academically and strive to help them understand the value of knowlege and how to grow as learners.</p>
@@ -62,7 +62,7 @@
 
           <p>Please feel free to contact <%= mail_to "chardj@portlandschools.org", "Joshua Chard"%> for more information.</p>
 
-        <h3><span><a id="fastt">FASTT Math</a></span></h3>
+        <h3><span>FASTT Math</span></h3>
 
           <p>The Common Core State Standards require students to develop fluency with their math facts in the four operations, addition, subtraction, multiplication, and division. FASTT Math from Scholastic is a computer-based program for students in grades 2-5 that helps students become fluent with their facts.</p>
 
