--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -27,7 +27,7 @@
               <li><%= link_to "PTO", "http://eecs.portlandpto.org/" %></li>
               <li><%= link_to "Newsletter", "http://www2.portlandschools.org/sites/default/files/School%20Success%20Plan.PDF" %></li>
               <li><%= link_to "Walking School Bus", "http://portlandwalkingschoolbus.org/" %></li>
-              <li><%= link_to "FASTT Math", "http://teacher.scholastic.com/math-fact-fluency/fastt-math-next-generation/" %></li>
+              <li><%= link_to "FASTT Math", about_academics_path(anchor: "fastt") %></li>
               <li><%= link_to "First In Math", "http://firstinmath.com/" %></li>
               <li><%= link_to "Math Team", "http://eastendmath.weebly.com/" %></li>
             </ul>
