--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,31 @@
-<%= Post.all %>
+<div class="background-clouds breadcrumbs-container">
+  <div class="container">
+    <ol class="breadcrumb">
+      <li><%= link_to 'Home', root_path %></li>
+      <li class="active">Blog</li>
+    </ol>
+  </div>
+</div>
+<!-- Breadcrumbs - END -->
+
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <%= render 'pages/about_sidebar' %>
+      </div>
+      <div class="col-md-9">
+        <div class="content">
+          <% @posts.each do |post| %>
+            <div class='post'>
+              <h1><%= post.title %></h1>
+              <p><%= post.author %></p>
+              <p><%= post.created_at %></p>
+              <p><%= post.body %></p>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+<section>
