--- a/app/views/pages/_staff_members.html.erb
+++ b/app/views/pages/_staff_members.html.erb
@@ -5,7 +5,7 @@
         <%= image_tag staff.image_url(:square_sm) %>
       </div>
       <div class="col-md-8">
-        <h3 class="media-heading"><%= link_to staff.full_name,  admin_user_posts_path(staff) %></h3>
+        <h3 class="media-heading"><%= link_to staff.full_name,  staff_member_posts_path(staff) %></h3>
         <p class="media-date"><%= staff.title %></p>
         <p><%= mail_to staff.email %></p>
         <p><%= staff.phone %></p>
