--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,11 +17,13 @@
       <div class="col-md-9">
         <div class="content">
           <% @posts.each do |post| %>
+
             <div class='post'>
               <h1><%= post.title %></h1>
               <p><%= post.author %></p>
               <p><%= post.created_at %></p>
               <p><%= post.body %></p>
+              <%= image_tag post.image_url(:square) %>
             </div>
           <% end %>
         </div>
