--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,11 +15,16 @@
         <%= render 'pages/about_sidebar' %>
       </div>
       <div class="col-md-9">
+        <h1>Welcome to <%= "#{@user.full_name}'s" %> Class</h1> 
+        <%= image_tag @user.image_url(:square_sm) %>
+      </div>
+      <div class="col-md-9">
         <div class="content">
+          <h1>Updates</h1>
           <% @posts.each do |post| %>
 
             <div class='post'>
-              <h1><%= post.title %></h1>
+              <h2><%= post.title %></h2>
               <p><%= post.author %></p>
               <p><%= post.created_at %></p>
               <p><%= post.body %></p>
