--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,6 +1,6 @@
 <div class="row event">
   <div class="col-md-2 col-sm-2">
-    <%= image_tag(event.image_url(:thumb)) %>
+    <%= image_tag(event.image_url) %>
   </div>
   <div class="meta col-md-10 col-sm-10">
     <h3><%= event.title %></h3>
