--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -1,6 +1,6 @@
 <div class="row article">
   <div class="col-md-4 col-sm-4">
-    <%= image_tag(article.image_url(:thumb)) %>
+    <%= image_tag(article.attachment_url(:thumb)) %>
   </div>
   <div class="meta col-md-6 col-sm-6">
     <h3><%= article.title %></h3>
