--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,7 +16,7 @@
       </div>
       <div class="col-md-9">
         <h1>Welcome to <%= "#{@user.full_name}'s" %> Class</h1> 
-        <%= image_tag @user.image_url(:square_sm) %>
+        <%= image_tag @user.attachment_url(:square_sm) %>
       </div>
       <div class="col-md-9">
         <div class="content">
@@ -25,12 +25,13 @@
 
             <div class='post'>
               <h2><%= post.title %></h2>
-              <p><%= post.author %></p>
               <p><%= post.created_at %></p>
               <p><%= post.body %></p>
-              <% if post.image? %>
-                <%= image_tag post.image_url(:square) %>
+              <% if post.attachment.image? %>
+                <%= image_tag post.attachment_url(:square) %>
               <% else %>
+                File:
+                <%= link_to post.attachment.url.split('/').last, post.attachment_url, :target => '_blank' %>
               <% end %>
             </div>
           <% end %>
