--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,29 +8,49 @@
 </div>
 <!-- Breadcrumbs - END -->
 
-<section>
+<section class="posts">
   <div class="container">
     <div class="row">
       <div class="col-md-3">
         <%= render 'pages/about_sidebar' %>
       </div>
       <div class="col-md-9">
-        <h1>Welcome to <%= "#{@user.full_name}'s" %> Class</h1> 
-        <%= image_tag @user.image_url(:square_sm) %>
-      </div>
-      <div class="col-md-9">
         <div class="content">
-          <h1>Updates</h1>
+          <p>All posts by <%= @user.full_name %>, <%= @user.title %></p> 
           <% @posts.each do |post| %>
-
             <div class='post'>
               <h2><%= post.title %></h2>
-              <p><%= post.author %></p>
-              <p><%= post.created_at %></p>
-              <p><%= post.body %></p>
-              <% if post.image? %>
-                <%= image_tag post.image_url(:square) %>
-              <% else %>
+            
+              <div class="row">
+                <div class="col-md-12 meta">
+                  <div class="avatar pull-left">
+                    <%= image_tag @user.image_url(:square_sm) %>
+                  </div>
+                  <p>Posted by <%= post.author %><br/>
+                  <%= l post.created_at, format: :pretty %></p>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-12 body">
+                  <%= render_markdown post.body %>
+                </div>
+              </div>
+              <% if post.images.present? %>
+                <div class="attachments">
+                  <p><strong>Images</strong></p>
+                  <% post.images.each do |attachment| %>
+                    <%= link_to image_tag(attachment.file_url(:square_sm)), attachment.file_url, :target => '_blank' %>
+                  <% end %>
+                </div>
+              <% end %>
+              <% if post.files.present? %>
+                <div class="attachments">
+                  <p><strong>Files</strong></p>
+                  <% post.files.each do |attachment| %>
+                    <%= link_to attachment.file_url.split('/').last, attachment.file_url, :target => '_blank' %>
+                  <% end %>
+                </div>
               <% end %>
             </div>
           <% end %>
