--- a/app/views/pages/academics.html.erb
+++ b/app/views/pages/academics.html.erb
@@ -75,7 +75,7 @@
 
           <p>At home, students can link to the Stretch Games in FASTT Math at <%= link_to "http://www2.portlandschools.org", "http://www2.portlandschools.org" %>. Click on the Student link and choose Scholastic Applications.</p>
 
-        <h3><span>First In Math</span></h3>
+        <h3><span><a id="fim">First In Math</span></h3>
 
           <p>First In Math is another computer-based program that allows students in grades K-5 to select math activities and develop skills while earning stickers for themselves and for their class team. This program can be accessed from any computer with an Internet connection at <%= link_to "firstinmath.com", "http://firstinmath.com" %>.</p>
 
@@ -83,7 +83,7 @@
 
 
         <h2><span>Literacy and Reading Comprehension</span></h2>
-        <p>Blurb here about reading programs, maybe something from the literacy girls? Forgot their names but they're awesome.</p>
+        <p>Information coming soon!</p>
       </div>
     </div>
   </div>
