--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -85,7 +85,7 @@
             </div>
             <div class="caption bordered background-white">
               <h3>Literacy</h3>
-              <p class="description">Our comprehensive literacy program helps students attain academic excellence in all areas of literacy including speaking, listening, reading and writing. (More here from Karen Fream Soon) </p>
+              <p class="description">Our comprehensive literacy program helps students attain academic excellence in all areas of literacy including speaking, listening, reading and writing.</p>
             </div>
           </div>
         </div>
@@ -93,45 +93,4 @@
       </div>
     </div>
   </section>
-  <!-- Info thumbnails - END -->
-
-
-  <!-- Info thumbnails - START -->
-  <!-- <section class="background-white color-black">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4 col-md-4">
-          <a class="info-thumbnail-link" href="/">
-            <div class="thumbnail info-thumbnail">
-              <div class="caption">
-                <h3><span class="fa fa-flag color-lead"></span> Font awesome</h3>
-                <p class="description">NEAT template supports as much modern technologies and trends as possible. One of them is font awesome icons. This great set of fonts is available anywhere you want on your page. Some of NEAT ui elements are also using font awesome like this info thumbnails.</p>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="col-sm-4 col-md-4">
-          <a class="info-thumbnail-link" href="/">
-          <div class="thumbnail info-thumbnail">
-            <div class="caption">
-              <h3><span class="fa fa-group color-lead"></span> Color classes</h3>
-              <p class="description">You can use template elements as you have them in the examples but if you feel creative you can compose our own color combinations in ui elements. You have beautiful set of flat ui colors to work with just use <i>color-{color-name}</i> or <i>background-{color-name}</i> to change text color or background of any element on the page.</p>
-            </div>
-          </div>
-          </a>
-        </div>
-        <div class="col-sm-4 col-md-4">
-          <a class="info-thumbnail-link" href="/">
-            <div class="thumbnail info-thumbnail">
-              <div class="caption">
-                <h3><span class="fa fa-gavel color-lead"></span> Some more info</h3>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis velit nibh, sit amet commodo sapien tristique at. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras bibendum erat at ultricies rhoncus.</p>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-    </div>
-  </section> -->
-  <!-- Info thumbnails - END -->
 </div>
