--- a/app/views/pages/_staff_members.html.erb
+++ b/app/views/pages/_staff_members.html.erb
@@ -5,11 +5,14 @@
         <%= image_tag staff.image_url(:square_sm) %>
       </div>
       <div class="col-md-8">
-        <h3 class="media-heading"><%= link_to staff.full_name,  staff_member_posts_path(staff) %></h3>
+        <h3 class="media-heading"><%= staff.full_name %></h3>
         <p class="media-date"><%= staff.title %></p>
         <p><%= mail_to staff.email %></p>
         <p><%= staff.phone %></p>
         <p><%= staff.bio %> </p>
+        <% unless staff.posts.empty? %>
+          <p><%= link_to "Classroom Blog", staff_member_posts_path(staff) %></p>
+        <% end %>  
       </div>
     </div>
   </div>
