--- a/app/assets/stylesheets/neat-overrides.scss
+++ b/app/assets/stylesheets/neat-overrides.scss
@@ -6,6 +6,12 @@
   font-size: 14px;
 }
 
+.nav .fa {
+  margin-top: 33px;
+  margin-right: 10px;
+  font-size: 15px;
+}
+
 a.thumbnail.gallery-thumbnail {
   border: none;
   margin-bottom: 0px;
