--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -30,7 +30,7 @@
           </div>
           <div class="col-md-6">
             <p class="social">
-              <a href="https://www.facebook.com/pages/East-End-Community-School/114915611904389"><span class="fa fa-facebook"></span></a>
+              <a href="https://www.facebook.com/eecsportland"><span class="fa fa-facebook"></span></a>
               <a href="http://www.youtube.com/results?search_query=%22east%20end%20community%20school%22&sm=3"><span class="fa fa-youtube"></span></a>
               <a href="http://www.pinterest.com/search/pins/?q=%22east%20end%20community%20school%22"><span class="fa fa-pinterest"></span></a>
             </p>
