--- a/app/views/pages/_about_sidebar.html.erb
+++ b/app/views/pages/_about_sidebar.html.erb
@@ -6,6 +6,7 @@
   <%= link_to 'Academics', about_academics_path, :class => "list-group-item #{'active' if controller.action_name == 'academics'}" %>
   <%= link_to 'Sustainability', about_sustainability_path, :class => "list-group-item #{'active' if controller.action_name == 'sustainability'}" %>
   <%= link_to 'Announcements', about_announcements_path, :class => "list-group-item #{'active' if controller.action_name == 'announcements'}" %>
+  <%= link_to 'Newsletter', newsletters_path, :class => "list-group-item #{'active' if controller.action_name == 'newsletter'}" %>
   <%= link_to 'EECS In The News', about_news_path, :class => "list-group-item #{'active' if controller.action_name == 'news'}" %>
   <%= link_to 'Get Involved', about_volunteers_path, :class => "list-group-item #{'active' if controller.action_name == 'volunteers'}" %>
 </div>
