change homepage text

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,8 +9,7 @@
                 <div class="caption header" data-animate="slideAppearRightToLeft" data-delay="0" data-length="300">
                   <h2>EECS</h2>
                   <p class="sub text-left" data-animate="slideAppearLeftToRight" data-delay="300" data-length="300"><span>Building academic excellence</span></p>
-                  <p class="sub text-left" data-animate="slideAppearLeftToRight" data-delay="500" data-length="300"><span>through healthy relationships</span></p>
-                  <p class="sub text-left" data-animate="slideAppearLeftToRight" data-delay="700" data-length="300"><span>and a child-centered approach.</span></p>
+                  <p class="sub text-left" data-animate="slideAppearLeftToRight" data-delay="700" data-length="300"><span>through a child-centered approach.</span></p>
                 </div>
               </div>
             </div>
