open handbook in new tab

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -23,7 +23,7 @@
             <ul class="dropdown-menu">
               <li><%= link_to "School Calendar", "http://www2.portlandschools.org/sites/default/files/2014-2015%20approved%204-8-14.pdf" %></li>
               <li><%= link_to "Lunch Menus", "http://www2.portlandschools.org/lunch-menus" %></li>
-              <li><%= link_to "Student Handbook", handbook_url %></li>
+              <li><%= link_to "Student Handbook", handbook_url, target => '_blank' %></li>
               <li><%= link_to "PTO", "http://eecs.portlandpto.org/" %></li>
               <li><%= link_to "Newsletter", newsletters_path %></li>
               <li><%= link_to "Walking School Bus", "http://portlandwalkingschoolbus.org/" %></li>
