--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,7 +41,7 @@
         <div class="col-sm-4 col-md-4">
           <div class="info-thumbnail-link">
           <div class="thumbnail info-thumbnail with-icon background-clouds color-text">
-            <%= image_tag("science.png") %>
+            <%= image_tag("solar-system.jpg") %>
             <div class="icon">
               <span class="fa-stack">
                 <i class="fa fa-circle fa-stack-2x color-lead"></i>
