additional math resources

--- a/app/views/pages/academics.html.erb
+++ b/app/views/pages/academics.html.erb
@@ -69,18 +69,45 @@
           <p>Fact mastery goals are as follows:</p>
             <ul>
               <li>addition 0-9 by the end of second grade;</li>
-              <li>subtraction 0-9 and multiplication 0-9 by the end of third grade;</li> 
-              <li>division 0-9 by the end of fourth grade.</li> 
+              <li>subtraction 0-9 and multiplication 0-9 by the end of third grade;</li>
+              <li>division 0-9 by the end of fourth grade.</li>
             </ul>
 
           <p>At home, students can link to the Stretch Games in FASTT Math at <%= link_to "http://www2.portlandschools.org", "http://www2.portlandschools.org" %>. Click on the Student link and choose Scholastic Applications.</p>
 
-        <h3><span><a id="fim">First In Math</span></h3>
+        <h3><span><a id="fim">First In Math</span></a></h3>
 
           <p>First In Math is another computer-based program that allows students in grades K-5 to select math activities and develop skills while earning stickers for themselves and for their class team. This program can be accessed from any computer with an Internet connection at <%= link_to "firstinmath.com", "http://firstinmath.com" %>.</p>
 
           <p>For more information about math at EECS, please feel free to e-mail <%= mail_to "chardj@portlandschools.org", "Joshua Chard"%>, give him a call at school, or just drop by his office (room 231).</p>
 
+        <h3><span><a id="additional">Additional Math Resources</a></span></h3>
+
+        <h4>K-2 Interactives</h4>
+          <p>Visit <%= link_to "K-2 Interactives", "http://www.uen.org/k-2interactives/math.shtml" %> for engaging, fun math games for children in grades K-2</p>
+
+        <h4>Mr. Nussbaum-Learning+Fun-PK-8</h4>
+          <p>Visit <%= link_to "Mr. Nussbaum's website", "http://www.mrnussbaum.com" %> for learning fun related to a range of subjects from Math, History, Geography, Science and more!</p>
+
+        <h4>PBS Kids-Math Games-PK-2</h4>
+          <p>Visit <%= link_to "PBS Kids Math Games", "http://pbskids.org/games/math/" %> for math games with your child's favorite PBS characters!</p>
+
+        <h4>Sheppard Software-PK-8</h4>
+          <p>Visit <%= link_to "Sheppard Software", "http://www.sheppardsoftware.com/" %> for hundreds of educational games.</p>
+
+        <h4>FASTT Math-Stretch Games</h4>
+          <p>Visit <%= link_to "Portland Public Schools website", "http://www2.portlandschools.org" %> for some fun FASTT Math games to help your child master mathematics. Here is how you can login:</p>
+
+          <ol>
+            <li>click on <strong>Students</strong></li>
+            <li>click on <strong>Scholastic Applications</strong></li>
+            <li>click on <strong>FASTT Math</strong></li>
+            <li>click on <strong>Stretch</strong></li>
+            <li>enter <em>Student ID</em> and <em>Password</em></li>
+          </ol>
+
+        <h4>Kahn Academy - Math tutorials</h4>
+          <p>Visit <%= link_to "Kahn Academy", "www.kahnacademy.com" %> for an immense offering of learning resources across a variety of subjects.</p>
 
         <h2><span>Literacy and Reading Comprehension</span></h2>
         <p>Information coming soon!</p>
