--- a/app/views/pages/academics.html.erb
+++ b/app/views/pages/academics.html.erb
@@ -107,10 +107,36 @@
           </ol>
 
         <h4>Kahn Academy - Math tutorials</h4>
-          <p>Visit <%= link_to "Kahn Academy", "www.kahnacademy.com" %> for an immense offering of learning resources across a variety of subjects.</p>
+          <p>Visit <%= link_to "Kahn Academy", "http://www.kahnacademy.com" %> for an immense offering of learning resources across a variety of subjects.</p>
 
-        <h2><span>Literacy and Reading Comprehension</span></h2>
-        <p>Information coming soon!</p>
+        <h2><span><a id="literacy">Literacy and Reading Comprehension</a></span></h2>
+          <h3><span>Raz Kids</span></h3>
+            <p>Every student has a login for <%= link_to "Raz Kids", "http://www.raz-kids.com/" %> please contact your student’s teacher if you have any questions or need the login information. Students may log in and read books, parents can also sign up to see child’s progress by clicking on the parent button from there parents would create an account.</p>
+
+            <p><strong>Raz-Kids delivers hundreds of interactive, leveled eBooks spanning 27 levels.</strong></p>
+
+            <ul>
+              <li>400+ <%= link_to "eBooks", "http://www.raz-kids.com/main/ViewPage/name/raz-quiz-room-info/" %> and open-book eQuizzes, with new books added every month, even in Spanish!</li>
+              <li>Corresponding eQuizzes test comprehension, providing teachers with skill reports for data-driven instruction.</li>
+              <li><%= link_to "Online running records", "http://www.raz-kids.com/main/ViewPage/name/RunningRecordInfo/" %> let teachers digitally assess each student, saving valuable classroom time.</li>
+              <li>The motivational <%= link_to "Raz Rocket", "http://www.raz-kids.com/main/ViewPage/name/rocket_launch/" %> gets students excited about reading and strengthens the school-to-home connection.</li>
+              <li>A winner of numerous <%= link_to "awards", "http://www.raz-kids.com/main/AboutRazKids/" %> including CODiE and EDDIE Awards and a Teachers’ Choice Award for the Classroom.</li>
+            </ul>
+
+            <p><strong>400+ eBooks that students can listen to, read, and even record themselves reading </strong></p>
+
+            <ul>
+              <li>Students can listen to <%= link_to "books", "http://www.raz-kids.com/main/RazQuizRoom/collectionId/4/leveledBookLanguageId/1" %> for modeled fluency, read books for practice, and then record themselves reading so teachers can monitor progress.</li>
+              <li>Every leveled eBook has an accompanying eQuiz to test reading comprehension.</li>
+              <li>Books include Spanish, Song, Nursery Rhymes, Poetry and more.</li>
+              <li>Because all books are available 24/7 via the Web, students can practice reading anytime, anywhere.</li>
+            </ul>
+
+          <h3><span>Starfall</span></h3>
+            <p><%= link_to "Starfall.com", "http://www.starfall.com/" %> has been a free online resource since 2002, teaching millions of children to read and inspiring a love of learning. The website is kid-safe. There is no advertising and we do not collect any personal information from children—in fact, we’re one of the safest children’s websites on the internet!</p>
+
+          <h3><span>IXL</span></h3>
+            <P><%= link_to "IXL", "http://www.ixl.com/ela/" %> is a website that shows skills needed in literacy for grades 2-5</P>
       </div>
     </div>
   </div>
