--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -32,6 +32,7 @@
               <li><%= link_to "First In Math", about_academics_path(anchor: "fim") %></li>
               <li><%= link_to "Math Team", "http://eastendmath.weebly.com/" %></li>
               <li><%= link_to "Additional Math Resources", about_academics_path(anchor: "additional") %></li>
+              <li><%= link_to "Literacy Resources", about_academics_path(anchor: "literacy") %></li>
             </ul>
           </li>
 
